--- a/apps/core/templates/partials/sidebar.html
+++ b/apps/core/templates/partials/sidebar.html
@@ -1,89 +1,95 @@
 {% load static %}
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
-    <ul class="nav">
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'apps:core:home' %}">
+        <i class="mdi mdi-grid-large menu-icon"></i>
+        <span class="menu-title">Dashboard</span>
+      </a>
+    </li>
+    <li class="nav-item nav-category">Vendas de produtos</li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+        <i class="menu-icon mdi mdi mdi-currency-usd"></i>
+        <span class="menu-title">Vendas</span>
+        <i class="menu-arrow"></i> 
+      </a>
+      <div class="collapse" id="ui-basic">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:venda:compra_create' %}">Cadastrar venda</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:venda:compra_list' %}">Listar venda</a></li>
+        </ul>
+      </div>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'apps:core:home' %}">
-          <i class="mdi mdi-grid-large menu-icon"></i>
-          <span class="menu-title">Dashboard</span>
-        </a>
-      </li>
-      <li class="nav-item nav-category">UI Elements</li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-          <i class="menu-icon mdi mdi-floor-plan"></i>
-          <span class="menu-title">UI Elements</span>
-          <i class="menu-arrow"></i> 
-        </a>
-        <div class="collapse" id="ui-basic">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="{% static 'pages/ui-features/buttons.html' %}">Buttons</a></li>
-            <li class="nav-item"> <a class="nav-link" href="{% static 'pages/ui-features/dropdowns.html' %}">Dropdowns</a></li>
-            <li class="nav-item"> <a class="nav-link" href="{% static 'pages/ui-features/typography.html' %}">Typography</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item nav-category">Forms and Datas</li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
-          <i class="menu-icon mdi mdi-card-text-outline"></i>
-          <span class="menu-title">Form elements</span>
+        <a class="nav-link" data-bs-toggle="collapse" href="#products" aria-expanded="false" aria-controls="products">
+          <i class="menu-icon mdi mdi mdi-cards-outline"></i>
+          <span class="menu-title">Produtos</span>
           <i class="menu-arrow"></i>
         </a>
-        <div class="collapse" id="form-elements">
+        <div class="collapse" id="products">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Cadastrar produto </a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Listar produtos </a></li>
           </ul>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
-          <i class="menu-icon mdi mdi-chart-line"></i>
-          <span class="menu-title">Charts</span>
-          <i class="menu-arrow"></i>
-        </a>
-        <div class="collapse" id="charts">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/charts/chartjs.html">ChartJs</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
-          <i class="menu-icon mdi mdi-table"></i>
-          <span class="menu-title">Tables</span>
-          <i class="menu-arrow"></i>
-        </a>
-        <div class="collapse" id="tables">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
-          <i class="menu-icon mdi mdi-layers-outline"></i>
-          <span class="menu-title">Icons</span>
-          <i class="menu-arrow"></i>
-        </a>
-        <div class="collapse" id="icons">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/icons/mdi.html">Mdi icons</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item nav-category">pages</li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-          <i class="menu-icon mdi mdi-account-circle-outline"></i>
-          <span class="menu-title">User Pages</span>
-          <i class="menu-arrow"></i>
-        </a>
-        <div class="collapse" id="auth">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item nav-category">help</li>
-    </ul>
-  </nav>
+    </li>
+    <li class="nav-item nav-category">Serviços e Consultas</li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
+        <i class="menu-icon mdi mdi-card-text-outline"></i>
+        <span class="menu-title">Consulta</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="form-elements">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"><a class="nav-link" href="{% url 'apps:atendimento:consulta_create' %}">Cadastrar consulta</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'apps:atendimento:consulta_list' %}">Listar consultas</a></li>
+        </ul>
+      </div>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
+        <i class="menu-icon mdi mdi-layers-outline"></i>
+        <span class="menu-title">Serviços</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="icons">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:atendimento:servico_create' %}">Cadastrar serviço</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:atendimento:servico_list' %}">Listar serviço</a></li>
+        </ul>
+      </div>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="collapse" href="#type_servece" aria-expanded="false" aria-controls="auth">
+        <i class="menu-icon mdi mdi mdi-wallet-giftcard"></i>
+        <span class="menu-title">Tipo de Serviço</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="type_servece">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Cadastrar tipo de serviço </a></li>
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Listar tipo de serviço </a></li>
+        </ul>
+      </div>
+    </li>
+
+    <li class="nav-item nav-category">pages</li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+        <i class="menu-icon mdi mdi-account-circle-outline"></i>
+        <span class="menu-title">Usuarios</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="auth">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Cadastrar  </a></li>
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</nav>
