--- a/apps/atendimento/templates/partials/table_servico.html
+++ b/apps/atendimento/templates/partials/table_servico.html
@@ -1,20 +1,20 @@
-
 <div class="col-lg-12 grid-margin stretch-card">
-    <div class="card">
+  <div class="card">
+    <div class="card-body">
       <div class="card-body">
-        <div class="card-body">
-          <div class="d-sm-flex justify-content-between align-items-start">
-            <div>
-              <h4 class="card-title card-title-dash">Ultimos serviços</h4>
-            </div>
-            <div>
-              <div class="dropdown">
-                <a href="{% url 'apps:atendimento:consulta_create' %}">
-                <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i class="mdi mdi-plus"></i>Adicionar serviço</button>
+        <div class="d-sm-flex justify-content-between align-items-start">
+          <div>
+            <h4 class="card-title card-title-dash">Ultimos serviços</h4>
+          </div>
+          <div>
+            <div class="dropdown">
+              <a href="{% url 'apps:atendimento:consulta_create' %}">
+                <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i
+                    class="mdi mdi-plus"></i>Adicionar serviço</button>
               </a>
-              </div>
             </div>
           </div>
+        </div>
         <div class="table-responsive">
           <table class="table table-striped">
             <thead>
@@ -34,6 +34,9 @@
                 <th>
                   tecnico
                 </th>
+                <th>
+                  ações
+                </th>
               </tr>
             </thead>
             <tbody>
@@ -49,10 +52,24 @@
                   {{servico.valor_total}}
                 </td>
                 <td>
-                    {{servico.data_servico}}
+                  {{servico.data_servico}}
                 </td>
                 <td>
                   {{servico.tecnico}}
+                </td>
+                <td>
+                  <div class="dropdown">
+                    <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuIconButton4"
+                      data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="mdi mdi-dots-vertical"></i>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
+                      <a class="dropdown-item" href="">
+                        editar
+                      </a>
+                      <a class="dropdown-item" href="#">apagar</a>
+                    </div>
+                  </div>
                 </td>
               </tr>
               {% endfor %}
