--- a/apps/atendimento/templates/tipo_servico_create.html
+++ b/apps/atendimento/templates/tipo_servico_create.html
@@ -1,5 +1,10 @@
 {%extends "base.html"%}
+
 {% load static %}
+
 {%block content%}
+{% include 'partials/form_tipo_servico.html' %}
+
 {%endblock%}
+
 {%block sidebar%} {% include 'partials/sidebar.html' %} {%endblock%}
