--- a/apps/atendimento/templates/tipo_servico_list.html
+++ b/apps/atendimento/templates/tipo_servico_list.html
@@ -1,5 +1,9 @@
 {%extends "base.html"%}
+
 {% load static %}
+
 {%block content%}
+{% include 'partials/table_tipo_servico.html' %}
 {%endblock%}
+
 {%block sidebar%} {% include 'partials/sidebar.html' %} {%endblock%}
