--- a/apps/venda/templates/partials/table_compra.html
+++ b/apps/venda/templates/partials/table_compra.html
@@ -1,5 +1,4 @@
 {% load static %}
-{%if user.fucionario_type == 'atendente' %}
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
@@ -34,6 +33,9 @@
                 <th>
                   atendente
                 </th>
+                <th>
+                  Ações
+                </th>
               </tr>
             </thead>
             <tbody>
@@ -54,6 +56,20 @@
                   <td>
                     {{c.atendente}}
                   </td>
+                  <td>
+                    <div class="dropdown">
+                      <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuIconButton4"
+                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="mdi mdi-dots-vertical"></i>
+                      </button>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
+                        <a class="dropdown-item"  href="">
+                          editar
+                        </a>
+                        <a class="dropdown-item" href="#">apagar</a>
+                      </div>
+                    </div>
+                  </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -62,5 +78,3 @@
       </div>
     </div>
   </div>
-
-  {%endif%}
