--- a/apps/venda/templates/produto_create.html
+++ b/apps/venda/templates/produto_create.html
@@ -1,5 +1,9 @@
 {%extends "base.html"%}
+
 {% load static %}
+
 {%block content%}
+{% include 'partials/form_produto.html' %}
 {%endblock%}
+
 {%block sidebar%} {% include 'partials/sidebar.html' %} {%endblock%}
