--- a/apps/atendimento/templates/partials/table_tipo_servico.html
+++ b/apps/atendimento/templates/partials/table_tipo_servico.html
@@ -52,7 +52,7 @@
                     <i class="mdi mdi-dots-vertical"></i>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
-                    <a class="dropdown-item" href="">
+                    <a class="dropdown-item" href="{% url 'apps:atendimento:tipo_servico_update' tipo.id %}">
                       editar
                     </a>
                     <a class="dropdown-item" href="#">apagar</a>
