--- a/apps/core/templates/partials/navbar.html
+++ b/apps/core/templates/partials/navbar.html
@@ -9,7 +9,7 @@
       </div>
       <div>
         <a class="navbar-brand brand-logo" href="{% url 'apps:core:home' %}">
-          <img src="{% static 'images/logo.svg' %}" alt="logo" />
+          <h2>PET SHOP</h2>
         </a>
         <a class="navbar-brand brand-logo-mini" href="index.html">
           <img src="{% static 'images/logo-mini.svg' %}" alt="logo" />
