--- a/apps/atendimento/templates/consulta_create_up.html
+++ b/apps/atendimento/templates/consulta_create_up.html
@@ -3,6 +3,8 @@
 {% load static %}
 
 {%block content%}
+<script src="{% static 'fontawesomefree/js/fontawesome.js' %}"></script>
+<script src="{% static 'fontawesomefree/js/solid.js' %}"></script>
 {% include 'partials/form_consulta_up.html' %}
 {%endblock%}
 
