--- a/apps/core/templates/partials/sidebar.html
+++ b/apps/core/templates/partials/sidebar.html
@@ -16,8 +16,8 @@
       </a>
       <div class="collapse" id="cli">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:venda:compra_create' %}">Cadastrar cliente</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:venda:compra_list' %}">Listar clinete</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:core:cliente_create' %}">Cadastrar cliente</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{% url 'apps:core:cliente_list' %}">Listar clinete</a></li>
         </ul>
       </div>
       <li class="nav-item">
@@ -28,8 +28,8 @@
         </a>
         <div class="collapse" id="pet">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="{% url 'apps:venda:produto_create' %}"> Cadastrar pet </a></li>
-            <li class="nav-item"> <a class="nav-link" href="{% url 'apps:venda:produto_list' %}"> Listar pet </a></li>
+            <li class="nav-item"> <a class="nav-link" href="{% url 'apps:core:pet_create' %}"> Cadastrar pet </a></li>
+            <li class="nav-item"> <a class="nav-link" href="{% url 'apps:core:pet_list' %}"> Listar pet </a></li>
           </ul>
         </div>
       </li>
