--- a/apps/venda/templates/compra_create_up.html
+++ b/apps/venda/templates/compra_create_up.html
@@ -4,63 +4,79 @@
 
 {%block content%}
 
-<script>
-    $(document).ready(function(){
-        $("#add-item").click(function(ev) {
-            ev.preventDefault();
-            var count = $('#order').children().length;
-            var tmplMarkup = $("#item-order").html();
-            var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
-            $("div#order").append(compiledTmpl);
+{% load static %}
+
+<link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+<script src="{% static 'fontawesomefree/js/fontawesome.js' %}"></script>
+<script src="{% static 'fontawesomefree/js/solid.js' %}"></script>
+<!-- Page Heading -->
+<div class="row">
   
-            // update form count
-            $('#id_product-TOTAL_FORMS').attr('value', count + 1);
-  
-            // some animate to scroll to view our new form
-            $('html, body').animate({
-                scrollTop: $("#add-item").position().top-200
-            }, 800);
-        });
-    });
-  </script>
-  <div class="col-md-12 grid-margin stretch-card ">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Cadastro de compra</h4>
-          <form class="forms-sample" method="post" action="{% url 'apps:venda:compra_update' object.id %}">
-              <div class="form-group">
-              {% csrf_token %}
-              {{ formset.management_form }}
-              {{form}} <!-- form de compra -->
-  
-              <legend class="lead mt-5">Adicionar compra</legend>
-  
-                  <div id="" class="">
-                      {% for item_order_form in formset %}
-                          <div id="item-{{ forloop.counter0 }}">
-                              {{ item_order_form }}
-                          </div>
-                      {% endfor %}
-                  </div>
-  
-                  <!-- <a class="btn btn-info" id="add-item"><i class="fa fa-plus"></i> Add Item</a> -->
-  
-                  <!-- <div class="form-inline buttons">
-                    <a href="" class="btn btn-warning pull-right"><i class="fa fa-times"></i> Cancelar</a>
-                    <button class="btn btn-primary pull-right" value="Save"><i class="fa fa-floppy-o"></i> Salvar</button>
-                </div> -->
-  
-              <button type="submit" class="btn btn-primary mr-2">Atualizar</button>
-          </div>
-          </form>
+    <!-- Area Chart -->
+    <div class="col-xl-12 col-lg-12">
+        <div class="card shadow mb-4">
+            <!-- Card Body -->
+            <div class="card-body">
+                <form method="POST" autocomplete="off">
+                    {% csrf_token %}
+                    <div class="form-group row">
+                        {{form}}
+                    </div>
+                    <hr>
+                    <h3>Itens</h3>
+                    <!-- Tabela do formulário de peças -->
+                    <div class="table-responsive">
+                        <table class="table">
+                            {{ formset.management_form }}
+
+                            {% for form in formset.forms %}
+                                {% if forloop.first %}
+                                    <thead>
+                                    <tr>
+                                        {% for field in form.visible_fields %}
+                                            <th>{{ field.label|capfirst }}</th>
+                                        {% endfor %}
+                                    </tr>
+                                    </thead>
+                                {% endif %}
+                                <tr class="{% cycle row1 row2 %} itemformset_row">
+                                    {% for field in form.visible_fields %}
+                                        <td>
+                                            {# Include the hidden fields in the form #}
+                                            {% if forloop.first %}
+                                                {% for hidden in form.hidden_fields %}
+                                                    {{ hidden }}
+                                                {% endfor %}
+                                            {% endif %}
+                                            {% for error in field.errors %}
+                                                <div class="alert alert-danger">
+                                                    <strong>{{ error }}</strong>
+                                                </div>
+                                            {% endfor %}
+                                            {{ field }}
+                                        </td>
+                                    {% endfor %}
+                                </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-user btn-block">
+                        Salvar alterações
+                    </a>
+                </form>
+            </div>
         </div>
-        <script type="text/html" id="item-order">
-          <div id="item-__prefix__" style="margin-top: 10px">
-                  {{ formset.empty_form }}
-          </div>
-      </script>
-      </div>
     </div>
+</div>
+<script type="text/javascript" src="{% static 'formset/jquery.formset.js' %}"></script>
+<script type="text/javascript" src="{% static 'formset/add_formsets.js' %}"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+
 {%endblock%}
 
 {%block sidebar%} {% include 'partials/sidebar.html' %} {%endblock%}
