--- a/apps/venda/templates/partials/table_compra.html
+++ b/apps/venda/templates/partials/table_compra.html
@@ -4,12 +4,12 @@
       <div class="card-body">
         <div class="d-sm-flex justify-content-between align-items-start">
           <div>
-            <h4 class="card-title card-title-dash">Ultimas Compras</h4>
+            <h4 class="card-title card-title-dash">Ultimas vendas</h4>
           </div>
           <div>
             <div class="dropdown">
               <a href="{% url 'apps:venda:compra_create' %}">
-              <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i class="mdi mdi-plus"></i>Adicionar consulta</button>
+              <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i class="mdi mdi-plus"></i>Adicionar venda</button>
             </a>
             </div>
           </div>
