--- a/apps/atendimento/templates/partials/table_servico.html
+++ b/apps/atendimento/templates/partials/table_servico.html
@@ -8,7 +8,7 @@
           </div>
           <div>
             <div class="dropdown">
-              <a href="{% url 'apps:atendimento:consulta_create' %}">
+              <a href="{% url 'apps:atendimento:servico_create' %}">
                 <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i
                     class="mdi mdi-plus"></i>Adicionar serviço</button>
               </a>
