--- a/apps/core/templates/partials/sidebar.html
+++ b/apps/core/templates/partials/sidebar.html
@@ -103,17 +103,39 @@
       </div>
     </li>
 
-    <li class="nav-item nav-category">pages</li>
+    <li class="nav-item nav-category">Funcionarios</li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="collapse" href="#aten" aria-expanded="false" aria-controls="aten">
+        <span class="menu-title">Atendente</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="aten">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Cadastrar  </a></li>
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+        </ul>
+      </div>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="collapse" href="#tec" aria-expanded="false" aria-controls="tec">
+        <span class="menu-title">Tecnico</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="tec">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Cadastrar  </a></li>
+          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+        </ul>
+      </div>
+    </li>
     <li class="nav-item">
       <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-        <i class="menu-icon mdi mdi-account-circle-outline"></i>
         <span class="menu-title">Usuarios</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="auth">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Cadastrar  </a></li>
-          <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
           <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
         </ul>
       </div>
