--- a/apps/venda/templates/partials/table_compra.html
+++ b/apps/venda/templates/partials/table_compra.html
@@ -48,7 +48,7 @@
                     {{c.cliente.nome}}
                   </td>
                   <td>
-                    {{c.valor}}
+                    {{c.valor_total}}
                   </td>
                   <td>
                       {{c.data_compra}}
