--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -2,8 +2,9 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-
- {% include 'partials/head.html' %}
+{% include 'partials/head.html' %}
+{% block head %}
+{%endblock%}
 
 <body>
   <div class="container-scroller">
@@ -49,6 +50,9 @@
 
   <!-- End plugin js for this page -->
   <!-- inject:js -->
+  {% block scripts %}
+  <!-- End custom js for this page-->
+  {%endblock%}
   <script src="{% static 'js/off-canvas.js' %}"></script>
   <script src="{% static 'js/hoverable-collapse.js' %}"></script>
   <script src="{% static 'js/template.js' %}"></script>
@@ -59,7 +63,6 @@
   <script src="{% static 'js/jquery.cookie.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/dashboard.js' %}"></script>
   <script src="{% static 'js/Chart.roundedBarCharts.js' %}"></script>
-  <!-- End custom js for this page-->
 </body>
 
 </html>
