--- a/apps/venda/templates/partials/table_produto.html
+++ b/apps/venda/templates/partials/table_produto.html
@@ -32,6 +32,9 @@
                 Preço
               </th>
               <th>
+                Imagem
+              </th>
+              <th>
                 Ações
               </th>
             </tr>
@@ -52,10 +55,13 @@
                 {{produto.preco}}
               </td>
               <td>
+                <img class="img-thumbnail" src="{{produto.imagem.miniatura.url}}" alt="image" />
+              </td>
+              <td>
                 <div class="dropdown">
-                  <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuIconButton4"
+                  <button type="button" class="btn btn-success" id="dropdownMenuIconButton4"
                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="mdi mdi-dots-vertical"></i>
+                    <i class="mdi mdi-chevron-down"></i>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
                     <a class="dropdown-item"  href="{% url 'apps:venda:produto_update' produto.id %}">
