--- a/apps/atendimento/templates/partials/table_consulta .html
+++ b/apps/atendimento/templates/partials/table_consulta .html
@@ -4,7 +4,7 @@
     <div class="card-body">
       <div class="d-sm-flex justify-content-between align-items-start">
         <div>
-          <h4 class="card-title card-title-dash">Ultimas consultas</h4>
+          <h4 class="card-title card-title-dash">Consultas</h4>
         </div>
         <div>
           <div class="dropdown">
@@ -35,9 +35,6 @@
                 veterinario
               </th>
               <th>
-                diagnostico
-              </th>
-              <th>
                 ações
               </th>
             </tr>
@@ -59,9 +56,6 @@
               </td>
               <td>
                 {{consulta.veterinario}}
-              </td>
-              <td>
-                {{consulta.diagnostico}}
               </td>
               <td>
                 <div class="dropdown">
