--- a/apps/atendimento/templates/servico_create_up.html
+++ b/apps/atendimento/templates/servico_create_up.html
@@ -11,7 +11,7 @@
 {%endblock%}
 
 {%block content%}
-{% include 'partials/form_servico.html' %}
+{% include 'partials/form_servico_up.html' %}
 {%endblock%}
 
 {%block sidebar%} {% include 'partials/sidebar.html' %} {%endblock%}
