--- a/apps/core/templates/home.html
+++ b/apps/core/templates/home.html
@@ -50,7 +50,7 @@
                 <div class="list align-items-center pt-3">
                     <div class="wrapper w-100">
                         <p class="mb-0">
-                            <a href="#" class="fw-bold text-primary">Show all <i
+                            <a href="{% url 'apps:venda:compra_list' %}" class="fw-bold text-primary">Show all <i
                                     class="mdi mdi-arrow-right ms-2"></i></a>
                         </p>
                     </div>
@@ -80,7 +80,7 @@
                 <div class="list align-items-center pt-3">
                     <div class="wrapper w-100">
                         <p class="mb-0">
-                            <a href="#" class="fw-bold text-primary">Show all <i
+                            <a href="{% url 'apps:atendimento:consulta_list' %}" class="fw-bold text-primary">Show all <i
                                     class="mdi mdi-arrow-right ms-2"></i></a>
                         </p>
                     </div>
@@ -111,7 +111,7 @@
                 <div class="list align-items-center pt-3">
                     <div class="wrapper w-100">
                         <p class="mb-0">
-                            <a href="#" class="fw-bold text-primary">Show all <i
+                            <a href="{% url 'apps:atendimento:servico_list' %}" class="fw-bold text-primary">Show all <i
                                     class="mdi mdi-arrow-right ms-2"></i></a>
                         </p>
                     </div>
