--- a/apps/core/templates/partials/table_consulta.html
+++ b/apps/core/templates/partials/table_consulta.html
@@ -4,7 +4,7 @@
       <div class="card-body">
         <div class="d-sm-flex justify-content-between align-items-start">
           <div>
-            <h4 class="card-title card-title-dash">Ultimas consultas</h4>
+            <h4 class="card-title card-title-dash">Consultas</h4>
           </div>
           <div>
             <div class="dropdown">
