--- a/apps/venda/templates/compra_create_up.html
+++ b/apps/venda/templates/compra_create_up.html
@@ -17,7 +17,7 @@
         <div class="card shadow mb-4">
             <!-- Card Body -->
             <div class="card-body">
-                <form method="POST" autocomplete="off" action="{% url 'apps:venda:compra_create' %}">
+                <form method="POST" autocomplete="off" action="{% url 'apps:venda:compra_update' object.id %}">
                     {% csrf_token %}
                     <div class="form-group row">
                         {{form}}
