--- a/apps/atendimento/templates/partials/form_tipo_servico.html
+++ b/apps/atendimento/templates/partials/form_tipo_servico.html
@@ -1,7 +1,7 @@
   <div class="col-md-12 grid-margin stretch-card ">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title">Cadastro de consulta</h4>
+          <h4 class="card-title">Cadastro de item de serviço</h4>
           <form class="forms-sample" method="post" action="{% url 'apps:atendimento:tipo_servico_create' %}">
               <div class="form-group">
               {% csrf_token %}
