--- a/apps/atendimento/templates/partials/table_tipo_servico.html
+++ b/apps/atendimento/templates/partials/table_tipo_servico.html
@@ -4,13 +4,13 @@
     <div class="card-body">
       <div class="d-sm-flex justify-content-between align-items-start">
         <div>
-          <h4 class="card-title card-title-dash">Ultimas consultas</h4>
+          <h4 class="card-title card-title-dash">Tipo de serviço</h4>
         </div>
         <div>
           <div class="dropdown">
-            <a href="{% url 'apps:atendimento:consulta_create' %}">
+            <a href="{% url 'apps:atendimento:tipo_servico_create' %}">
               <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i
-                  class="mdi mdi-plus"></i>Adicionar consulta</button>
+                  class="mdi mdi-plus"></i>Adicionar tipo des serviço</button>
             </a>
           </div>
         </div>
