--- a/apps/core/templates/pets/pets_list.html
+++ b/apps/core/templates/pets/pets_list.html
@@ -9,13 +9,13 @@
     <div class="card-body">
       <div class="d-sm-flex justify-content-between align-items-start">
         <div>
-          <h4 class="card-title card-title-dash">Ultimas consultas</h4>
+          <h4 class="card-title card-title-dash">Pets</h4>
         </div>
         <div>
           <div class="dropdown">
-            <a href="{% url 'apps:atendimento:consulta_create' %}">
+            <a href="{% url 'apps:core:pet_create' %}">
               <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i
-                  class="mdi mdi-plus"></i>Adicionar consulta</button>
+                  class="mdi mdi-plus"></i>Adicionar pet</button>
             </a>
           </div>
         </div>
